--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <h1>Rod Ortega</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Work</a></li>
-                <li><a href="lab.html">Lab</a></li>
-                <li><a href="about.html">About</a></li>
+                <li><a href="./">Work</a></li>
+                <li><a href="./lab">Lab</a></li>
+                <li><a href="./about">About</a></li>
             </ul>
         </nav>
     </header>
